--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.style.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Roboto+Condensed' rel='stylesheet' type='text/css'>
+
 </head>
+
 <body>
+<nav class="navigation">
+	<div class="content"><img src="assets/karma-logo.svg" alt="karma logo"width= "25">
+		<ul class="navlinks">
+			<li><a href="link.html">Login</a></li>
+			<li><a href="link.html">Blog</a></li>
+			<li><a href="link.html">Store</a></li>
+			<li><a href="link.html">How it Works</a></li>
+			<li class="active"><a href="link.html">Meet Karma</a></li>
+		</ul>
+	</div>
+</nav>	
+<section class="introduction">
+	<div class="introduction-content">
+	<h1> Introducing Karma</h1>
+	<h3> Bring WiFi with you, everywhere you go.</h3>
+		<div class="big-button">
+		<button>Learn More</button>
+		</div>
+	</div>
+</section>
+<footer></footer>
 	
 </body>
 </html>
