--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 		</div>
 	</div>
 </section>
+<section class="little-karma">
+	<div class="little-karma-content">
+	<h1>Everyone needs a little karma</h1>
+	<ul>
+		<li><img src="assets/devices.svg" alt="devices" width="150">Internet for all devices</li>
+		<li><img src="assets/coffee.svg" atl="coffee" width="150">Boost your productivity</li>
+		<li><img src="assets/refill.svg" atl="refill" width="150">Pay as you go</li>	
+	</ul>
+	</div>
+
+</section>
 <footer></footer>
 	
 </body>
